Removing local.meta

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,16 +1,15 @@
-#
-# Splunk app configuration file
-#
-
-[install]
-is_configured = 0
+[launcher]
+author = Greg Ford
+version = 1.0.0
+description = Ivanti ISM App for Splunk
 
 [ui]
 is_visible = 1
 label = Ivanti ISM App for Splunk
 
-[launcher]
-author = Greg Ford
-description = 
-version = 1.0.0
+[package]
+check_for_updates = 1
+id = ivanti_ism_app
 
+[install]
+is_configured = 0
